--- a/LibraryMvc/LibraryMvc.csproj
+++ b/LibraryMvc/LibraryMvc.csproj
@@ -187,6 +187,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911260111347_InitialCreate.cs" />
+    <Compile Include="Migrations\201911260111347_InitialCreate.Designer.cs">
+      <DependentUpon>201911260111347_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004212337021_fixedVariables.cs" />
+    <Compile Include="Migrations\202004212337021_fixedVariables.Designer.cs">
+      <DependentUpon>202004212337021_fixedVariables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004212347442_fixedVariablesInModelsForSure.cs" />
+    <Compile Include="Migrations\202004212347442_fixedVariablesInModelsForSure.Designer.cs">
+      <DependentUpon>202004212347442_fixedVariablesInModelsForSure.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -291,6 +304,17 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201911260111347_InitialCreate.resx">
+      <DependentUpon>201911260111347_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004212337021_fixedVariables.resx">
+      <DependentUpon>202004212337021_fixedVariables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004212347442_fixedVariablesInModelsForSure.resx">
+      <DependentUpon>202004212347442_fixedVariablesInModelsForSure.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
